--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -1,27 +1,48 @@
-FROM ubuntu:20.04
+FROM ubuntu:20.04 AS BUILD
+LABEL mantainer="Wiljon Bolten <wiljonbolten@gmail.com>" vendor="überhub"
 
 ARG OLS_VERSION
 ARG PHP_VERSION
 
-
-RUN apt-get update && apt-get install wget curl cron tzdata -y
+RUN apt-get update && \
+    apt-get install \
+    wget \ 
+    curl \ 
+    cron \
+    tzdata \ 
+    -y
 
 RUN wget https://openlitespeed.org/preuse/openlitespeed-$OLS_VERSION.tgz && \
-    tar xzf openlitespeed-$OLS_VERSION.tgz && cd openlitespeed && ./install.sh && \
-    echo 'cloud-docker' > /usr/local/lsws/PLAT && rm -rf /openlitespeed && rm /openlitespeed-$OLS_VERSION.tgz
+    tar xzf openlitespeed-$OLS_VERSION.tgz && \
+    cd openlitespeed && \
+    ./install.sh && \
+    echo 'cloud-docker' > /usr/local/lsws/PLAT && \
+    rm -rf /openlitespeed && \
+    rm /openlitespeed-$OLS_VERSION.tgz
 
-RUN apt-get install mysql-client $PHP_VERSION $PHP_VERSION-common $PHP_VERSION-mysql $PHP_VERSION-opcache \
-    $PHP_VERSION-curl $PHP_VERSION-imagick $PHP_VERSION-redis $PHP_VERSION-memcached $PHP_VERSION-intl -y
+RUN apt-get install \
+    mysql-client \
+    $PHP_VERSION \
+    $PHP_VERSION-apcu \
+    $PHP_VERSION-common \
+    $PHP_VERSION-curl \
+    $PHP_VERSION-imagick \
+    $PHP_VERSION-intl \
+    $PHP_VERSION-memcached \
+    $PHP_VERSION-mysql \
+    $PHP_VERSION-opcache \
+    $PHP_VERSION-redis \
+    -y
 
 RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp7* ]]; then apt-get install $PHP_VERSION-json -y; fi"]
+
+COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
+
+RUN rm -f /etc/openlitespeed/admin/htpasswd
 
 RUN wget -O /usr/local/lsws/admin/misc/lsup.sh \
     https://raw.githubusercontent.com/litespeedtech/openlitespeed/master/dist/admin/misc/lsup.sh && \
     chmod +x /usr/local/lsws/admin/misc/lsup.sh
-
-RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
-	chmod +x wp-cli.phar && mv wp-cli.phar /usr/bin/wp && \
-	ln -s /usr/local/lsws/$PHP_VERSION/bin/php /usr/bin/php
 
 RUN wget -O -  https://get.acme.sh | sh
 
@@ -30,17 +51,19 @@ EXPOSE 7080
 ADD docker.conf /usr/local/lsws/conf/templates/docker.conf
 ADD setup_docker.sh /usr/local/lsws/bin/setup_docker.sh
 ADD httpd_config.xml /usr/local/lsws/conf/httpd_config.xml
-ADD htpasswd /usr/local/lsws/admin/conf/htpasswd
 
 RUN /usr/local/lsws/bin/setup_docker.sh && rm /usr/local/lsws/bin/setup_docker.sh
 RUN chown 999:999 /usr/local/lsws/conf -R
 RUN cp -RP /usr/local/lsws/conf/ /usr/local/lsws/.conf/
 RUN cp -RP /usr/local/lsws/admin/conf /usr/local/lsws/admin/.conf/
+
 #RUN sed -i "s|fcgi-bin/lsphp|/usr/local/lsws/$PHP_VERSION/bin/lsphp|g" /usr/local/lsws/conf/httpd_config.conf
+
 RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp8* ]]; then ln -sf /usr/local/lsws/$PHP_VERSION/bin/lsphp /usr/local/lsws/fcgi-bin/lsphp8; fi"]
 RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp8* ]]; then ln -sf /usr/local/lsws/fcgi-bin/lsphp8 /usr/local/lsws/fcgi-bin/lsphp; fi"]
 RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp7* ]]; then ln -sf /usr/local/lsws/$PHP_VERSION/bin/lsphp /usr/local/lsws/fcgi-bin/lsphp7; fi"]
 RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp7* ]]; then ln -sf /usr/local/lsws/fcgi-bin/lsphp7 /usr/local/lsws/fcgi-bin/lsphp; fi"]
+
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
