--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,39 +1,49 @@
 name: docker-build
 
-on:
-  push:
-    branches:
-      - master
+? on
+: ? push
+  : ? branches
+    : - master
 
-  pull_request:
-    branches:
-      - master
-env:
-  FOLDER: template
-  OLS_VERSION: 1.7.14
+  ? pull_request
+  : ? branches
+    : - master
+? env
+: FOLDER: template
+  OLS_VERSION: 1.7.15
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix: 
-        PHP_VERSION: [lsphp74, lsphp80]
-        TAG: [latest,'']
-    steps:
-      - uses: actions/checkout@v2
+? jobs
+: ? test
+  : runs-on: ubuntu-latest
+    ? strategy
+    : ? matrix
+      : ? PHP_VERSION
+        : [
+            php73,
+            php74,
+            php80,
+            php81,
+          ]
+        ? TAG
+        : [
+            latest,
+            "",
+          ]
+    ? steps
+    : - uses: actions/checkout@v2
       - name: Docker build and push
         if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'push' }}
-        run: |
+        ? run
+        : |
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
           cd ${{ env.FOLDER }}
-          bash build.sh --ols ${{ env.OLS_VERSION }} --php ${{ matrix.PHP_VERSION }} --tag "${{ matrix.TAG }}" --push
-        env: 
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          bash build.sh --ols ${{ env.OLS_VERSION }} --php ls${{ matrix.PHP_VERSION }} --tag "${{ matrix.TAG }}" --push
+        ? env
+        : DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - name: Docker build
         if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'pull_request' }}
-        run: |
+        ? run
+        : |
           cd ${{ env.FOLDER }}
-          bash build.sh --ols ${{ env.OLS_VERSION }} --php ${{ matrix.PHP_VERSION }} --tag ${{ matrix.TAG }}            
-
-  
+          bash build.sh --ols ${{ env.OLS_VERSION }} --php ls${{ matrix.PHP_VERSION }} --tag ${{ matrix.TAG }}
