--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -22,18 +22,18 @@ RUN wget https://openlitespeed.org/preuse/openlitespeed-$OLS_VERSION.tgz && \
 
 RUN apt-get install \
     mysql-client \
-    $PHP_VERSION \
-    $PHP_VERSION-common \
-    $PHP_VERSION-curl \
-    $PHP_VERSION-imagick \
-    $PHP_VERSION-intl \
-    $PHP_VERSION-memcached \
-    $PHP_VERSION-mysql \
-    $PHP_VERSION-opcache \
-    $PHP_VERSION-redis \
+    ls$PHP_VERSION \
+    ls$PHP_VERSION-common \
+    ls$PHP_VERSION-curl \
+    ls$PHP_VERSION-imagick \
+    ls$PHP_VERSION-intl \
+    ls$PHP_VERSION-memcached \
+    ls$PHP_VERSION-mysql \
+    ls$PHP_VERSION-opcache \
+    ls$PHP_VERSION-redis \
     -y
 
-RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp7* ]]; then apt-get install $PHP_VERSION-json -y; fi"]
+RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == php7* ]]; then apt-get install ls$PHP_VERSION-json -y; fi"]
 
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
 
@@ -56,12 +56,12 @@ RUN chown 999:999 /usr/local/lsws/conf -R
 RUN cp -RP /usr/local/lsws/conf/ /usr/local/lsws/.conf/
 RUN cp -RP /usr/local/lsws/admin/conf /usr/local/lsws/admin/.conf/
 
-#RUN sed -i "s|fcgi-bin/lsphp|/usr/local/lsws/$PHP_VERSION/bin/lsphp|g" /usr/local/lsws/conf/httpd_config.conf
+#RUN sed -i "s|fcgi-bin/lsphp|/usr/local/lsws/ls$PHP_VERSION/bin/lsphp|g" /usr/local/lsws/conf/httpd_config.conf
 
-RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp8* ]]; then ln -sf /usr/local/lsws/$PHP_VERSION/bin/lsphp /usr/local/lsws/fcgi-bin/lsphp8; fi"]
-RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp8* ]]; then ln -sf /usr/local/lsws/fcgi-bin/lsphp8 /usr/local/lsws/fcgi-bin/lsphp; fi"]
-RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp7* ]]; then ln -sf /usr/local/lsws/$PHP_VERSION/bin/lsphp /usr/local/lsws/fcgi-bin/lsphp7; fi"]
-RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp7* ]]; then ln -sf /usr/local/lsws/fcgi-bin/lsphp7 /usr/local/lsws/fcgi-bin/lsphp; fi"]
+RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == php8* ]]; then ln -sf /usr/local/lsws/ls$PHP_VERSION/bin/lsphp /usr/local/lsws/fcgi-bin/lsphp8; fi"]
+RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == php8* ]]; then ln -sf /usr/local/lsws/fcgi-bin/lsphp8 /usr/local/lsws/fcgi-bin/lsphp; fi"]
+RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == php7* ]]; then ln -sf /usr/local/lsws/ls$PHP_VERSION/bin/lsphp /usr/local/lsws/fcgi-bin/lsphp7; fi"]
+RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == php7* ]]; then ln -sf /usr/local/lsws/fcgi-bin/lsphp7 /usr/local/lsws/fcgi-bin/lsphp; fi"]
 
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
